Mas detalles implementados satisfactoriamente

--- a/src/app/components/educacion-item/educacion-item.component.html
+++ b/src/app/components/educacion-item/educacion-item.component.html
@@ -9,8 +9,10 @@
     <div class="edu">
       <h1 class="h1">{{educacion.titulo}}</h1>
       <h2 class="h2"> {{educacion.nombreInstitucion}}</h2>
-      <p class="h3"> {{educacion.gradoEducacion}} - {{educacion.estadoEducacion}} </p>
-      <p class="h4"> {{educacion.fechaInicio | date:'MMMM yyyy'}} - {{educacion.fechaFinal | date:'MMMM yyyy'}}</p>
+      <p class="h3"> {{educacion.gradoEducacion}}<span *ngIf="educacion.estadoEducacion != 'En Curso'"> -
+        {{educacion.estadoEducacion}} </span> </p>
+      <p class="h4"> {{educacion.fechaInicio | date:'MMMM yyyy'}} -
+        {{educacion.fechaFinal | date:'MMMM yyyy'}} <span *ngIf="educacion.estadoEducacion == 'En Curso'">{{educacion.estadoEducacion}} </span> </p>
     </div>
   </div>
   <div class="buttons">
