--- a/src/app/components/experiencialaboral-item/experiencialaboral-item.component.html
+++ b/src/app/components/experiencialaboral-item/experiencialaboral-item.component.html
@@ -11,7 +11,7 @@
       <h2 class="h3"> {{trabajo.nombreEmpresa}}</h2>
       <p class="h3">{{trabajo.descripcion}}</p>
       <p class="h4">{{trabajo.fechaInicio | date:' dd MMMM  yyyy'}} -
-         {{trabajo.fechaFinal | date:' dd MMMM  yyyy'}}</p>
+         {{trabajo.fechaFinal | date:' dd MMMM  yyyy'}}<span *ngIf="trabajo.enCurso">Actualmente trabajando</span>
     </div>
   </div>
   <div class="buttons">
