--- a/src/app/components/educacion/educacion.component.html
+++ b/src/app/components/educacion/educacion.component.html
@@ -100,24 +100,17 @@
             El estado del estudio es requerido.
         </div>
       </div>
-      <div class="md-form mb-4">
-        <div class="logo" *ngIf="!isAdd && urlLogo != null">
-          <label>Logo Institución</label>
-          <br>
-          <br>
-          <img src="{{urlLogo}}" class="img-fluid" alt="Responsive image">
-        </div>
-        <br>
-        <label>Logo de la institución</label>
-        <input class="form-control" type="text"
-        [ngClass]="{'is-invalid': formEdu.get('logoEducacion')?.hasError('pattern'),
-      'is-valid': !formEdu.get('logoEducacion')?.hasError('pattern') && formEdu.get('logoEducacion')?.value}"
-        formControlName="logoEducacion" placeholder="Inserte una URL valida para la imagen del logo">
-        <div>
-          <p *ngIf="formEdu.get('logoEducacion')?.hasError('pattern')" class="text-danger">
-            Ingrese una URL valida.
-          </p>
-        </div>
+      <div class="upload">
+        <label id="logoLabel">Logo de la institucion</label>
+        <div class="logoImagen">
+          <img  *ngIf="uploadImg" src="{{imagenes[0]}}" >
+          <img  *ngIf="!isAdd && urlLogo != null" src="{{urlLogo}}">
+          <input type="file" accept=".png, .jpg,.jpeg" (change)="cargarImagen($event)" id="inputFile">
+      </div>
+      <div class="buttonUpload">
+        <label for="inputFile" class="custom-file-upload">Subir Imagen</label>
+    </div>
+        <input class="form-control" type="text" id="URL"  formControlName="logoEducacion" placeholder="">
       </div>
     </form>
   </div>
