--- a/src/app/components/experiencia-laboral/experiencia-laboral.component.html
+++ b/src/app/components/experiencia-laboral/experiencia-laboral.component.html
@@ -92,21 +92,17 @@
           </p>
         </div>
       </div>
-      <div class="md-form mb-4">
-        <div class="logo" *ngIf="!isAdd && urlLogo != null">
-          <label>Logo de la empresa</label>
-          <img src="{{urlLogo}}" class="img-fluid" alt="Responsive image">
-        </div>
-        <label>URL de la imagen</label>
-        <input class="form-control" type="text"
-        [ngClass]="{'is-invalid': formExp.get('logoEmpresa')?.hasError('pattern'),
-      'is-valid': !formExp.get('logoEmpresa')?.hasError('pattern') && formExp.get('logoEmpresa')?.value}"
-        formControlName="logoEmpresa" placeholder="Ingrese una URL valida para el logo de la empresa">
-        <div>
-          <p *ngIf="formExp.get('logoEmpresa')?.hasError('pattern')" class="text-danger">
-            Ingrese una URL valida.
-          </p>
-        </div>
+      <div class="upload">
+        <label id="logoLabel">Logo de la empresa</label>
+        <div class="logoImagen">
+          <img  *ngIf="uploadImg" src="{{imagenes[0]}}" >
+          <img  *ngIf="!isAdd && urlLogo != null" src="{{urlLogo}}">
+          <input type="file" accept=".png, .jpg,.jpeg" (change)="cargarImagen($event)" id="inputFile">
+      </div>
+      <div class="buttonUpload">
+        <label for="inputFile" class="custom-file-upload">Subir Imagen</label>
+    </div>
+        <input class="form-control" type="text" id="URL"  formControlName="logoEmpresa" placeholder="">
       </div>
     </form>
   </div>
