implementacion de subida de fotos exitosa

--- a/src/app/components/educacion/educacion.component.css
+++ b/src/app/components/educacion/educacion.component.css
@@ -8,13 +8,19 @@
   display: none;
 }
 
-#URL {
-  display: none;
-}
-
 .custom-file-upload {
   border: 1px solid #ccc;
   background-color: #0b5bd2;
+  color: #fff;
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+  user-select: none;
+}
+
+.custom-file-delete {
+  border: 1px solid #ccc;
+  background-color: #d20b0b;
   color: #fff;
   display: inline-block;
   padding: 6px 12px;
@@ -26,11 +32,22 @@
   transform: scale(0.9);
 }
 
+.custom-file-delete:active {
+  transform: scale(0.9);
+}
+
 .logoImagen {
   display:flex;
   justify-content:center;
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+.uploadImage{
+  display:flex;
+  justify-content:center;
+  color:rgb(18, 90, 18);
+  size:16px;
 }
 
 .logoImagen img{
