--- a/src/app/components/encabezado/encabezado.component.css
+++ b/src/app/components/encabezado/encabezado.component.css
@@ -84,3 +84,68 @@ position: absolute;
   margin-bottom: 10px;
 }
 
+#inputFile {
+  display: none;
+}
+
+.custom-file-upload {
+  border: 1px solid #ccc;
+  background-color: #0b5bd2;
+  color: #fff;
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+  user-select: none;
+}
+
+.custom-file-delete {
+  border: 1px solid #ccc;
+  background-color: #d20b0b;
+  color: #fff;
+  display: inline-block;
+  padding: 6px 12px;
+  cursor: pointer;
+  user-select: none;
+}
+
+.custom-file-upload:active {
+  transform: scale(0.9);
+}
+
+.custom-file-delete:active {
+  transform: scale(0.9);
+}
+
+.logoImagen {
+  display:flex;
+  justify-content:center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+.upload {
+  display:flex;
+}
+.uploadImage{
+  display:flex;
+  justify-content:center;
+  color:rgb(18, 90, 18);
+  size:16px;
+}
+
+.logoImagen img{
+  width: 200px;
+}
+
+#logoLabel{
+  display:flex;
+  justify-content:center;
+}
+
+.buttonUpload{
+  display:flex;
+  justify-content:center;
+}
+
+
+
