--- a/src/app/components/encabezado/encabezado.component.html
+++ b/src/app/components/encabezado/encabezado.component.html
@@ -142,8 +142,8 @@
         </div>
         <label *ngIf="isUploading" class="uploadImage"> Subiendo Imagen</label>
         <div class="buttonUpload">
-          <label for="inputFile" class="custom-file-upload">Cambiar Imagen}}</label> &nbsp;
-          <label *ngIf="personaDto.urlAvatar != ''" (click)="borrarImagen()" class="custom-file-delete">Borrar
+          <label for="inputFile" class="custom-file-upload"><i class="fa-solid fa-cloud-arrow-up"></i> Cambiar Imagen</label> &nbsp;
+          <label *ngIf="personaDto.urlAvatar != ''" (click)="borrarImagen()" class="custom-file-delete"><i class="fa-solid fa-trash-can"></i> Borrar
             Imagen</label>
         </div>
       </div>
