--- a/src/app/components/encabezado/encabezado.component.html
+++ b/src/app/components/encabezado/encabezado.component.html
@@ -71,6 +71,9 @@
           <p *ngIf="fecha_nacimiento?.hasError('required')" class="text-danger">
             La fecha de nacimiento es requerida.
           </p>
+          <p *ngIf="fecha_nacimiento?.errors?.['fechaValida']"  class="text-danger">
+            La fecha de nacimiento no puede superar la actual.
+          </p>
         </div>
       </div>
       <div class="md-form mb-4" *ngIf="editPerso">
